generak refactoring